--- a/style.css
+++ b/style.css
@@ -10,11 +10,12 @@ body{
 
 .main{
     text-align: center;
-    padding: 100px 200px;
+    padding: 60px 240px;
 	display: inline-block;
     margin: 0 auto;
     margin-top: 150px;
     background: #060606;
+    border-radius: 4px;
 
 }
 
@@ -24,7 +25,13 @@ body{
 	text-transform: uppercase;
 }
 
+.med-font{
+	font-size: 14px; 
+	padding: 0px 0 100px 0; 
+	color: #666;
+}
+
 .sub-font{
-	font-size: 16px;
-	text-transform: lowercase;
+	font-size: 13px;
+	color: #222;
 }
